# simple_vtk_example

./: .gitignore  CMakeLists.txt  UseVcpkg.cmake  main.cpp  vcpkg.json
